Fix a few bugs again and add a new feature.

--- a/main.css
+++ b/main.css
@@ -60,6 +60,7 @@ iframe {
   border-radius: 15px;
   height: 390px !important;
   background-color: var(--accent-1);
+  overflow: hidden;
 }
 .titles {
   height: 300px;
